refactor; removed code duplication around creating WinEDDS.LoadFiles for use in the Parser project. Eliminated AuthenticatedCredentialProvider, all authentication is now done in WinEddsLoadFileFactory

--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -171,20 +171,19 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Authentication\AuthenticatedCredentialProvider.cs" />
-    <Compile Include="Authentication\Interfaces\IAuthenticatedCredentialProvider.cs" />
     <Compile Include="DataReaderFactory.cs" />
     <Compile Include="FieldParserFactory.cs" />
     <Compile Include="ImportPreviewJob.cs" />
     <Compile Include="Interfaces\IDataReaderFactory.cs" />
     <Compile Include="Interfaces\IFieldParser.cs" />
     <Compile Include="Interfaces\IFieldParserFactory.cs" />
+    <Compile Include="Interfaces\IWinEddsLoadFileFactory.cs" />
     <Compile Include="LoadFileBase.cs" />
     <Compile Include="LoadFileDataReader.cs" />
     <Compile Include="LoadFileFieldParser.cs" />
-    <Compile Include="Models\ImportProviderSettings.cs" />
     <Compile Include="Services\ImportPreviewService.cs" />
     <Compile Include="Services\Interfaces\IImportPreviewService.cs" />
+    <Compile Include="WinEddsLoadFileFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
