refactor; fixing logic where column names that included commas (e.g. field names in a pipe delimited file might have a comma)

--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -172,11 +172,14 @@
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="DataReaderFactory.cs" />
+    <Compile Include="EnumerableParser.cs" />
+    <Compile Include="EnumerableParserFactory.cs" />
     <Compile Include="FieldParserFactory.cs" />
     <Compile Include="Interfaces\IPreviewJobFactory.cs" />
     <Compile Include="PreviewJob.cs" />
     <Compile Include="PreviewJobFactory.cs" />
     <Compile Include="Interfaces\IDataReaderFactory.cs" />
+    <Compile Include="Interfaces\IEnumerableParserFactory.cs" />
     <Compile Include="Interfaces\IFieldParser.cs" />
     <Compile Include="Interfaces\IFieldParserFactory.cs" />
     <Compile Include="Interfaces\IPreviewJob.cs" />
