--- a/source/kCura.IntegrationPoints.ImportProvider.Parser.Tests/kCura.IntegrationPoints.ImportProvider.Parser.Tests.csproj
+++ b/source/kCura.IntegrationPoints.ImportProvider.Parser.Tests/kCura.IntegrationPoints.ImportProvider.Parser.Tests.csproj
@@ -161,6 +161,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="EnumerableParserTests.cs" />
     <Compile Include="ImportPreviewServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
