REL-109825 RIP Export - Name exported files after production issue - fix for Folder/Subfolder export type

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -5,8 +5,8 @@
 	</configSections>
 	<appSettings>
 		<!-- Service Bus specific app setings for messaging connections -->
-		<add key="ProtocolVersion" value="http"/>
-		<add key="targetHost" value="localhost" />
+		<add key="ProtocolVersion" value="https"/>
+		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
@@ -33,7 +33,7 @@
 		<add key="LocalRAPFileLocation" value ="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap"/>
 	</appSettings>
 	<kCura.Config>
-		<add key="connectionString" value="data source=localhost; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=localhost;packet size=4096" />
+		<add key="connectionString" value="data source=dv-pol-pl1.testing.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl1.testing.corp;packet size=4096" />
 	</kCura.Config>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
