Adding LoadFilePreviewer wrapper with interface, this will help with unit testing the PreviewJob class; fixing small bug with header in LoadFilePreviewer

--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -175,7 +175,9 @@
     <Compile Include="EnumerableParser.cs" />
     <Compile Include="EnumerableParserFactory.cs" />
     <Compile Include="FieldParserFactory.cs" />
+    <Compile Include="Interfaces\ILoadFilePreviewer.cs" />
     <Compile Include="Interfaces\IPreviewJobFactory.cs" />
+    <Compile Include="LoadFilePreviewerWrapper.cs" />
     <Compile Include="PreviewJob.cs" />
     <Compile Include="PreviewJobFactory.cs" />
     <Compile Include="Interfaces\IDataReaderFactory.cs" />
