REL-109880 adding unit test class for PreviewJob and first unit test

--- a/source/kCura.IntegrationPoints.ImportProvider.Parser.Tests/kCura.IntegrationPoints.ImportProvider.Parser.Tests.csproj
+++ b/source/kCura.IntegrationPoints.ImportProvider.Parser.Tests/kCura.IntegrationPoints.ImportProvider.Parser.Tests.csproj
@@ -163,6 +163,7 @@
     </Compile>
     <Compile Include="EnumerableParserTests.cs" />
     <Compile Include="ImportPreviewServiceTests.cs" />
+    <Compile Include="PreviewJobTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
