Fixed missing references

--- a/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
@@ -60,6 +60,14 @@
       <HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Relativity.Kepler, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_Kepler)\lib\net45\Relativity.Kepler.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Relativity.Services.ServiceProxy, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_Kepler_Client)\lib\net45\Relativity.Services.ServiceProxy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
