--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -64,11 +64,11 @@
       <HintPath>..\packages\$(kCura_Crypto)\lib\net45\kCura.Crypto.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="Relativity.Logging, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Relativity.Logging, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Logging)\lib\net45\Relativity.Logging.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="Relativity.Logging.Interfaces, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Relativity.Logging.Interfaces, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
       <Private>True</Private>
     </Reference>
@@ -792,6 +792,10 @@
     <ProjectReference Include="..\kCura.IntegrationPoints.ImportProvider.Parser\kCura.IntegrationPoints.ImportProvider.Parser.csproj">
       <Project>{180650d2-1eea-4242-949d-7bde78eeccb4}</Project>
       <Name>kCura.IntegrationPoints.ImportProvider.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\kCura.IntegrationPoints.ImportProvider\kCura.IntegrationPoints.ImportProvider.csproj">
+      <Project>{835F7005-E106-4C29-AD9C-FE8BD5CF8280}</Project>
+      <Name>kCura.IntegrationPoints.ImportProvider</Name>
     </ProjectReference>
     <ProjectReference Include="..\kCura.IntegrationPoints.LDAPProvider\kCura.IntegrationPoints.LDAPProvider.csproj">
       <Project>{8398b06f-3716-4834-9593-a017f2714261}</Project>
