REL-109322 Fix WebAPIFilterException logging
* Remove LogException method from BaseController as it is no longer used
* Split interface and class into separate files (for IErrorFactory and IErrorService)
* Make SystemEventLoggingService non-static (mostly for testing purposes)
* Remove empty catch from ErrorService
* Refactor WebAPIFilterException
* Add Unit Tests for WebAPIFilterException

--- a/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests/kCura.IntegrationPoints.Web.Tests.csproj
@@ -207,6 +207,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Attributes\WebAPIFilterExceptionTests.cs" />
     <Compile Include="Controllers\API\ImportPrevewControllerTests.cs" />
     <Compile Include="Controllers\API\ImportProviderDocumentControllerTests.cs" />
     <Compile Include="Helpers\TestBase.cs" />
@@ -216,7 +217,6 @@
     <Compile Include="Controllers\API\WorkspaceViewControllerTests.cs" />
     <Compile Include="Controllers\DestinationTypeControllerTests.cs" />
     <Compile Include="Controllers\FolderPathControllerTests.cs" />
-    <Compile Include="Controllers\BaseControllerTests.cs" />
     <Compile Include="Controllers\LdapControllerTests.cs" />
     <Compile Include="Controllers\RelativityControllerTests.cs" />
     <Compile Include="Controllers\API\ResourcePoolControllerTests.cs" />
