--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -64,11 +64,11 @@
       <HintPath>..\packages\$(kCura_Crypto)\lib\net45\kCura.Crypto.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="Relativity.Logging, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Relativity.Logging, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Logging)\lib\net45\Relativity.Logging.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="Relativity.Logging.Interfaces, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Relativity.Logging.Interfaces, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
       <Private>True</Private>
     </Reference>
@@ -311,6 +311,7 @@
     <Compile Include="Controllers\API\SavedSearchesTreeController.cs" />
     <Compile Include="Controllers\API\SearchFolderController.cs" />
     <Compile Include="Controllers\API\WorkspaceViewController.cs" />
+    <Compile Include="ErrorFactory.cs" />
     <Compile Include="Extensions\LogErrorExtensions.cs" />
     <Compile Include="Controllers\API\ChoiceController.cs" />
     <Compile Include="Controllers\API\ExportFieldsController.cs" />
