--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -311,7 +311,6 @@
       <Link>AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="SqlObjectTypeQuery.cs" />
-    <Compile Include="Toggle\ExtendedRelativityToggle.cs" />
     <Compile Include="Transformers\IDtoTransformer.cs" />
     <Compile Include="Transformers\JobHistoryErrorTransformer.cs" />
     <Compile Include="Transformers\IntegrationPointTransformer.cs" />
@@ -393,7 +392,9 @@
       <Name>kCura.IntegrationPoints.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Toggle\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib"
