basic ImportDataReader implementation with logging in SyncWorker; non-functional

--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Readers\DataColumnWithValue.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Readers\ImportDataReader.cs" />
     <Compile Include="Readers\RelativityReaderBase.cs" />
     <Compile Include="RelativityFeaturePathService.cs" />
     <Compile Include="SecureAppDomainDataMarshaller.cs" />
